# Prefab-Template

./: .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_V3.md  CHANGELOG.md  DOCS_INDEX.md  FILE_HANDLING_GUIDE.md  FILE_HANDLING_GUIDE_V3.md  PREFAB_GUIDE.md  PRE_COMMIT_GUIDE.md  QUICK_REFERENCE.md  README.md  STREAMING_GUIDE.md  V3_MIGRATION_SUMMARY.md  prd v3.0.md  prd v3.1.md  prd.md  prefab-manifest.json  pyproject.toml
.github/workflows/: build-and-release.yml
scripts/: quick_start.py  validate_manifest.py
src/: __init__.py  main.py
src/utils/: __init__.py  math_utils.py
tests/: test_main.py  test_utils.py  test_video.py
